reset starting VC

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 CapitalOneShoppingCartDemo/CapitalOneShoppingCartDemo.xcodeproj/project.xcworkspace/xcuserdata/jadennation.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
+CapitalOneShoppingCartDemo/CapitalOneShoppingCartDemo.xcodeproj/project.xcworkspace/xcuserdata/jadennation.xcuserdatad/UserInterfaceState.xcuserstate
