Cart List Table cell display

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
 
-*.xcuserstate
-
+CapitalOneShoppingCartDemo/CapitalOneShoppingCartDemo.xcodeproj/project.xcworkspace/xcuserdata/jadennation.xcuserdatad/UserInterfaceState.xcuserstate
