--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 CapitalOneShoppingCartDemo/CapitalOneShoppingCartDemo.xcodeproj/project.xcworkspace/xcuserdata/jadennation.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
